fix refresh page align

--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ html, body {
 }
 
 #refreshtxt {
-    font-size: initial;
-    color: black;
+	color: black;
+	display: block;
+	font-size: initial;
 }
 
 .format {
